# bytechor

./: .gitignore  README.md  duckdb.py  index.md  pyproject.toml  requirements.txt
aichatbot/: __main__.py
aichatbot/resources/: dataset.csv
design/: sequence_diagram.plantuml  sequence_diagram.txt
